# darling-ruby

./: .gitignore  CMakeLists.txt  README.md  array.c  eval_error.c  exts.mk  goruby.c  main.c  probes.h  rbconfig.rb  ruby-output.txt
Ruby.framework/Versions/2.0/Headers/ruby/: config.h
Ruby.framework/Versions/2.0/Resources/: Info.plist  version.plist
Ruby.framework/Versions/2.0/Resources/BridgeSupport/: Ruby.bridgesupport
Ruby.framework/Versions/2.0/usr/include/ruby-2.0.0/universal-darwin16/ruby/: config.h
Ruby.framework/Versions/2.0/usr/lib/pkgconfig/: ruby-2.0.pc
Ruby.framework/Versions/2.6/Headers/: ruby.h
Ruby.framework/Versions/2.6/Headers/ruby/: rb_mjit_min_header-2.6.3.h
Ruby.framework/Versions/2.6/usr/include/ruby-2.6.0/universal-darwin19/: rb_mjit_min_header-2.6.3-i386.h
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/: cache.ri  page-NEWS-1_9_2.ri  page-NEWS-2_3_0.ri  page-NEWS-2_4_0.ri  page-NEWS-2_5_0.ri  page-contributing_rdoc.ri  page-contributors_rdoc.ri  page-dtrace_probes_rdoc.ri  page-extension_rdoc.ri  page-globals_rdoc.ri  page-keywords_rdoc.ri  page-marshal_rdoc.ri  page-regexp_rdoc.ri  page-security_rdoc.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/ACL/: cdesc-ACL.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/ARGF/: cdesc-ARGF.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Abbrev/: cdesc-Abbrev.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Base64/: cdesc-Base64.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Benchmark/: cdesc-Benchmark.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/BigDecimal/: cdesc-BigDecimal.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Binding/: cdesc-Binding.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Bundler/: cdesc-Bundler.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/CGI/: cdesc-CGI.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/CMath/: cdesc-CMath.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/CSV/: cdesc-CSV.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Comparable/: cdesc-Comparable.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/ConditionVariable/: cdesc-ConditionVariable.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Continuation/: cdesc-Continuation.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/DEBUGGER__/: cdesc-DEBUGGER__.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/DateTime/: cdesc-DateTime.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Digest/: cdesc-Digest.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Dir/: cdesc-Dir.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Encoding/: cdesc-Encoding.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Exception2MessageMapper/: cdesc-Exception2MessageMapper.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Fiddle/: cdesc-Fiddle.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/FileUtils/: cdesc-FileUtils.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Find/: cdesc-Find.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Float/: cdesc-Float.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Forwardable/: cdesc-Forwardable.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/GC/: cdesc-GC.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/GDBM/: cdesc-GDBM.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/GetoptLong/: cdesc-GetoptLong.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/HTTPClientException/: cdesc-HTTPClientException.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Hash/: cdesc-Hash.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/IPSocket/: cdesc-IPSocket.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/IRB/: cdesc-IRB.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/JSON/: cdesc-JSON.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Kconv/: cdesc-Kconv.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Kernel/: cdesc-Kernel.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/KeyError/: cdesc-KeyError.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/LUSolve/: cdesc-LUSolve.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Marshal/: cdesc-Marshal.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Math/: cdesc-Math.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Matrix/: cdesc-Matrix.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Module/: cdesc-Module.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Monitor/: cdesc-Monitor.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/MonitorMixin/: cdesc-MonitorMixin.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/NameError/: cdesc-NameError.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/Newton/: cdesc-Newton.ri
Ruby.framework/Versions/2.6/usr/share/ri/2.6.0/system/NilClass/: cdesc-NilClass.ri
darling/framework/Ruby.framework/Versions/2.6/usr/lib/pkgconfig/: ruby-2.6.pc
darling/framework_sdk/Ruby.framework/Versions/2.6/usr/include/ruby-2.6.0/: ruby  ruby.h  universal-darwin19
darling/include/ruby/: ruby.h
darling/include/ruby/ruby/: backward.h  config.h  debug.h  defines.h  encoding.h  intern.h  io.h  missing.h  onigmo.h  oniguruma.h  re.h  regex.h  ruby.h  st.h  subst.h  thread.h  thread_native.h  util.h  version.h  vm.h  win32.h
darling/notes/: TODO.md
ext/-test-/string/: extconf.h
ext/-test-/symbol/: extconf.h
ext/dl/: extconf.h
ext/fiddle/: extconf.h
ext/readline/: extconf.h
extconfs/curses/: extconf.h
extconfs/dbm/: extconf.h
extconfs/digest/sha2/: extconf.h
extconfs/etc/: extconf.h
extconfs/fiddle/: extconf.h
extconfs/socket/: extconf.h
extconfs/tk/: extconf.h
include/: README.md  constdefs.h  ffi  msgtracer_keys.h  verconf.h
include/ruby/: config.h
ruby/: .gitignore  CMakeLists.txt  array.c  eval.c  eval_error.c  id.c  known_errors.inc  main.c  verconf.h
ruby/include/ruby/: config.h
(+1471 files in other folders)
